re PR c++/10468 (const typeof(x) is non-const, but only in templates)

PR c++/10468
	* pt.c (tsubst): Handle qualified TYPEOF_TYPEs correctly.

	PR c++/10468
	* g++.dg/ext/typeof5.C: New test.

From-SVN: r68614